--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
 	.square {
 		position: absolute;
 		background-color: black;
+		width: 50px;
+		height: 50px;
 }
 	.textBox{
  		position: absolute;
