--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
 .App {
 	text-align: center;
+	height: 100vh;
+	width: 100vw;
 
 	button {
 		font-weight: bold;
 	}
 	.square {
+		z-index: auto;
 		position: absolute;
 		background-color: black;
 		width: 50px;
@@ -13,4 +16,34 @@
 	.textBox{
  		position: absolute;
 }
+	.popup{
+		z-index: 100;
+		position: absolute;
+		height: 100vh;
+	  width: 100vw;
+		background: rgba(210, 215, 221, 0.9);
+	  }
+	.text{
+		position: absolute;
+		background: azure;
+		border-radius: 50%;
+		width: 18%;
+		height: 6%;
+		top: 50vh;
+		left: 50vw;
+		transform: translate(-50%,-50%);
+	  color: rgb(47, 10, 151);
+		text-decoration: solid;
+		font-size: xx-large;
+		font-family: Arial, Helvetica, sans-serif;
+		box-shadow: 5px 5px 5px rgb(143, 143, 224);
+	}
+	// .dot{
+	// 	position: absolute;
+	// 	background-color: red;
+	// 	width: 0.5vh;
+	// 	height: 0.5vw;
+	// 	top:50vh;
+	// 	left:50vw;
+	// }
 }
