Test Completed for Square and popup component

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@
 	  width: 100vw;
 		background: rgba(210, 215, 221, 0.9);
 	  }
-	.text{
+	.paused{
 		position: absolute;
 		background: azure;
 		border-radius: 50%;
